
  * New upstream release:
    - Fixed various memory leaks in the Python bindings, thanks to Anders
      Hammarquist for reporting this and providing a patch (Closes: #529291).
  * debian/patches:
    - Added bts530814-hurd to fix a FTBFS on Hurd, thanks to Marc Dequènes for
      reporting this and providing a patch (Closes: #530814).
    - Removed doc-fixes - applied upstream.

 -- Sebastian Harl <tokkee@debian.org>  Mon, 01 Jun 2009 13:10:51 +0200

rrdtool (1.3.7-1) unstable; urgency=low

  * New upstream release (Closes: #431060):
    - Fixed pathname used in rrdgraph's --imginfo output (Closes: #497739).
  * debian/patches:
    - Updated bts428778-floating-point-exception to apply to the latest
      version of rrdtool; use rrd_free2() instead of rrd_free() to not leak
      memory.
    - Updated no-rpath-for-perl to apply to the latest version of rrdtool.
    - Removed bts493553-pango-utf-8 - included upstream.
    - Removed bts496847-error-handling - included upstream.
    - Removed bts498183-segfault-madvise - included upstream.
    - Removed bts499349-memleaks - included upstream.
    - Removed bts499350-data-corruption - included upstream.
    - Removed typo-ruby - included upstream.
    - Added bts494874-gnu-kfreebsd to fix a FTBFS on GNU/kFreeBSD - thanks to
      Petr Salinger for the patch (Closes: #494874).
    - Added doc-fixes to fix a POD error in doc/rrdtutorial.pod.
    - Added compiler-warning-fixes - upstream patch to fix some compiler
      warnings.
  * debian/rules:
    - Remove src/librrd.sym in the clean target - this file is automatically
      created during the build but not cleaned up in the upstream Makefiles.
    - Remove .txt and .pod documentation from the 'rrdtool' binary package -
      the manpages are a lot more useful.
    - Pass --fail-missing (instead of --list-missing) to dh_install.
    - Use 'pyversions -vr' instead of 'pysupport-parseversions'.
  * Added new binary package rrdtool-dbg. Unfortunately, segfaults and the