@@ -7,8 +7,10 @@ rrdtool (1.3.8-1) unstable; urgency=low
     - Added bts530814-hurd to fix a FTBFS on Hurd, thanks to Marc Dequènes for
       reporting this and providing a patch (Closes: #530814).
     - Removed doc-fixes - applied upstream.
+  * debian/control, debian/rules:
+    - Removed transitional package "python-rrd" which is no longer required.
 
- -- Sebastian Harl <tokkee@debian.org>  Mon, 01 Jun 2009 13:10:51 +0200
+ -- Sebastian Harl <tokkee@debian.org>  Mon, 01 Jun 2009 13:23:33 +0200
 
 rrdtool (1.3.7-1) unstable; urgency=low
 
